# QStyleIconLister

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  CMakeUserPresets.json  QStyleIconLister.cpp  QStyleStandardIcon.cpp  QStyleStandardIcon.h  README.md
